--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+  "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "dependencies": {
     "axios": "^1.7.1",
